samples/_failures_safe/1761092719_6c7c6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8455e6f6.c: In function ‘main’:
./samples/SAFE/__tmp_8455e6f6.c:137:9: error: expected declaration or statement at end of input
  137 |         printf("\nCannot add matrices: incompatible dimensions\n");
      |         ^~~~~~
./samples/SAFE/__tmp_8455e6f6.c:137:9: error: expected declaration or statement at end of input
